--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
     "body-parser": "^1.15.2",
     "crawler": "^1.0.1",
     "express": "^4.14.0",
+    "jsonwebtoken": "^7.2.1",
     "mongoose": "^4.7.4",
     "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-facebook-token": "^3.3.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0",
     "request": "^2.79.0"
   }
 }
