--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^7.2.1",
     "mongoose": "^4.7.4",
     "morgan": "^1.7.0",
+    "multer": "^1.2.1",
     "nodemailer": "^2.7.0",
     "nodemailer-wellknown": "^0.2.0",
     "passport": "^0.3.2",
